- Fixing text scrolling and interactions - Merging Nandos code: -> audio script -> presentation app div (html) - Cleaning and optimizing code

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "tone": "^15.0.4",
     "vite": "^5.2.0"
   },
   "dependencies": {
