--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
+  "dependencies": {
+    "express": "^4.19.2",
     "gsap": "^3.12.5",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
+    "socket.io": "^4.7.5",
     "three": "^0.167.1",
     "tone": "^15.0.4",
-    "vite": "^5.4.1"
+    "vite": "^5.4.2"
   },
-  "dependencies": {
-    "nosleep.js": "^0.12.0"
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.44",
+    "tailwindcss": "^3.4.10"
   }
 }
