--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "gsap": "^3.12.5",
+    "nosleep.js": "^0.12.0",
     "socket.io": "^4.7.5",
     "three": "^0.167.1",
     "tone": "^15.0.4",
