--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "socket.io": "^4.7.5",
     "three": "^0.167.1",
     "tone": "^15.0.4",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-glsl": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
