--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@csound/browser": "^6.18.7",
     "express": "^4.19.2",
     "gsap": "^3.12.5",
     "nosleep.js": "^0.12.0",
